# spiking-fullsubnet

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  genindex.html  index.html  metricsboard_track_1_test.yml  metricsboard_track_1_validation.md  metricsboard_track_1_validation.yml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/concepts/: experiment_arguments.doctree  trainer.doctree
.doctrees/getting_started/: installation.doctree  logging_and_visualization.doctree  project_structure.doctree  running_an_experiment.doctree  running_an_experiment_accelerate.doctree
.doctrees/reference/: FAQ.doctree  changelog.doctree  conduct.doctree  contributing.doctree
.github/workflows/: docs.yml  mdbook.yml  mkdocs.yml  sphinx.yml  sphinx_build.yml
_sources/: index.md.txt
_sources/concepts/: experiment_arguments.md.txt  trainer.md.txt
_sources/getting_started/: installation.md.txt  logging_and_visualization.md.txt  project_structure.md.txt  running_an_experiment.md.txt  running_an_experiment_accelerate.md.txt
_sources/reference/: FAQ.md.txt
audiozen/: common_trainer.py  config_loader.py  constant.py  debug_utils.py  logger.py  loss.py  lr_scheduler.py  metric.py  metrics.py  optimization.py  pit.py  trainer.py  trainer_args.py  trainer_utils.py  trainer_v2.py  utils.py
audiozen/acoustics/: audio_feature.py  filterbank.py  io.py  sslt.py
audiozen/dataset/: base_dataset.py
audiozen/model/: fullsubnet.py
audiozen/models/: base_model.py  fullsubnet.py
audiozen/trainer/: base_trainer.py  base_trainer_accelerate.py  base_trainer_dualgan_accelerate_ddp_validate.py  base_trainer_gan_accelerate.py  base_trainer_gan_accelerate_ddp_validate.py  base_trainer_no_amp.py  base_trainer_set_epoch.py  early_stop_trainer.py  integration.py
audiozen/trainer_backup/: base_trainer_accelerate.py  base_trainer_dp.py  base_trainer_dualgan_accelerate_ddp_validate.py  base_trainer_gan_accelerate.py  base_trainer_gan_accelerate_ddp_validate.py  early_stop_trainer.py  utils.py
concepts/: experiment_arguments.html  trainer.html
concepts/experiment_arguments/: index.html
concepts/trainer/: index.html
docs/: Makefile  book.toml  experiment_arguments.md  getting_started.md  index.md  requirements.txt  running_an_experiment.md  trainer.md
docs/api/: acoustics.md  loss.md
docs/concepts/: experiment_arguments.md  trainer.md
docs/get_started/: prerequisites.md  project_structure.md
docs/getting_started/: configurations.md  prerequisites.md  project_structure.md  running_an_experiment.md
docs/source/: api.rst  conf.py  index.md  index.rst  trainer.rst
docs/src/: SUMMARY.md  introduction.md  prerequisites.md  trainer.md  usage.md
getting_started/: installation.html  logging_and_visualization.html  project_structure.html  running_an_experiment.html  running_an_experiment_accelerate.html
getting_started/installation/: index.html
getting_started/logging_and_visualization/: index.html
getting_started/project_structure/: index.html
getting_started/running_an_experiment/: index.html
launch/: config_reference.json  taiji_launcher.py
launch/backup/: start.sh
model_zoo/: metricsboard_track_1_test.md  metricsboard_track_1_test.yml  metricsboard_track_1_validation.md
notebooks/: check_compile.ipynb  check_grad.ipynb  check_harmonic.ipynb  check_macs_performance.ipynb  check_metric.ipynb  check_pandas_dataframe.ipynb  check_pesq.ipynb  check_pyarrow.ipynb  check_resamping_speed.ipynb  check_resample.ipynb  check_sf_load.ipynb  check_si_sdr.ipynb  check_torchsubband.ipynb  enhancementpass2audiozen.ipynb  extract_weights.ipynb  quantize_model.ipynb
notebooks/fullsubnet_workflow/: subband.ipynb
recipes/dns_icassp_2023/: run.py  run_dns5_blind_testset.py  (+1 more)
reference/: FAQ.html  changelog.html  conduct.html  contributing.html
search/: search_index.json
tests/: conftest.py  test_model_module.py
tools/: WAcc.py  calculate_metrics.py  calculate_metrics_accelerate.py  check_clip_activity.py  check_existence.py  check_missing_pair.py  check_mono.py  check_non_signal.py  collect_model.py  convert_dns_noise_to_hdf5.py  dirs2txt.py  dns_mos_2023_01_10.py  dns_mos_filter.py  enhancementpass_model_to_audiozen_model.py  extract_speaker_embedding.py  loudness_norm.py  resampling.py  rir_generator.py  seek_best_score_from_logfile.py  select_subset.py  split_scp.py  trim_seg.py  txt2duration.py  upload_model_hf.py
(+396 files in other folders)
